# mealforge

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 153bf345acc5_create_ingredients_table.py  64c868f9d733_create_recipe_tables.py  842633d6643a_add_user_body_fields_and_nutrition_goals.py  911b07ee6f47_create_users_table.py
app/: main.py
app/auth/: dependencies.py
app/core/: config.py  database.py
app/health/: router.py
app/ingredients/: models.py  router.py  schemas.py  seed_ingredients.py
app/ingredients/seed_data/: curated_ingredients.csv
app/nutrition/: models.py  router.py  schemas.py  services.py
app/recipes/: models.py  router.py  schemas.py  services.py
app/users/: models.py  router.py  schemas.py
docs/: ERD.md  FRONTEND_MILESTONE.md
